<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_text_title_top"
        android:text="@string/cedula_eleitoral"
        android:textColor="#0000FF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_ronaldinho"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/ronaldinho"
            android:scaleType="fitCenter"
            android:src="@drawable/r10" />

        <ImageView
            android:id="@+id/img_kb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/kb"
            android:scaleType="fitCenter"
            android:src="@drawable/kb" />

        <ImageView
            android:id="@+id/img_lula"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/lula"
            android:scaleType="fitCenter"
            android:src="@drawable/lula" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/main_radioGr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonRonaldinho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ronaldinho"
            android:textSize="@dimen/text_size_name_voto"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/radioButtonKb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kb"
            android:textSize="@dimen/text_size_name_voto"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/radioButtonLula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lula"
            android:textSize="@dimen/text_size_name_voto"
            android:textStyle="bold|italic" />
    </RadioGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:gravity="center">

            <Button
                android:id="@+id/btnPolling"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/apuracao" />

            <Button
                android:id="@+id/btnVote"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/votar" />
        </LinearLayout>

    </FrameLayout>
</LinearLayout>